# CoNAL

./: README.md
conal/: CMakeLists.txt  setup-env.sh
conal/components/activity_manager/: CMakeLists.txt  autostart.sh
conal/components/activity_manager/src/: ActivityManagerComponent.cpp  ActivityManagerComponent.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Task.cpp  Task.hpp  TaskState.hpp  TaskStateChangeListener.hpp  main.cpp
conal/components/activity_manager/src/node_spec/: AndSpecification.hpp  BroadcastSpecification.hpp  MasterSpecification.hpp  NameSpecification.hpp  NotSpecification.hpp  OrSpecification.hpp  ParamSpecification.hpp  Parser.hpp  Scanner.hpp  Specification.hpp  lexer.l  parser.y
conal/components/activity_manager/test/: main.cpp
conal/components/code_manager/: CMakeLists.txt  autostart.sh
conal/components/code_manager/loaders/CppLoader/: CppLoader.cpp  CppLoader.hpp
conal/components/code_manager/loaders/DummyLoader/: DummyLoader.cpp  DummyLoader.hpp
conal/components/code_manager/src/: CodeManagerComponent.cpp  CodeManagerComponent.hpp  DataBinding.hpp  DataChangeListener.hpp  DataManagerCommunicationInterface.hpp  Loader.hpp  LoaderManager.cpp  LoaderManager.hpp  conal_utilities.hpp  main.cpp
conal/components/collector/: CMakeLists.txt
conal/components/collector/src/: CollectorComponent.cpp  CollectorComponent.hpp  main.cpp
conal/components/data_manager/: CMakeLists.txt  autostart.sh
conal/components/data_manager/sources/Array/: Array.cpp  Array.hpp
conal/components/data_manager/sources/DummySource/: DummySource.cpp  DummySource.hpp
conal/components/data_manager/sources/Variable/: Variable.cpp  Variable.hpp
conal/components/data_manager/src/: DataDefinition.cpp  DataDefinition.hpp  DataManagerComponent.cpp  DataManagerComponent.hpp  DataStorage.cpp  DataStorage.hpp  Source.hpp  SourceManager.cpp  SourceManager.hpp  main.cpp
conal/components/data_manager/test/: main.cpp
conal/docker/: Dockerfile  build.sh  setup-env.sh
conal/env/: CMakeLists.txt
conal/framework/: CMakeLists.txt  Doxyfile.in
conal/framework/include/: Component.hpp  ComponentManager.hpp  Connection.hpp  Logger.hpp  Message.hpp  NetworkUtils.hpp  POSIXPipe.hpp  Performative.hpp  TCPCLient.hpp  TCPServer.hpp
conal/framework/src/: Component.cpp  ComponentManager.cpp  Connection.cpp  Logger.cpp  Message.cpp  NetworkUtils.cpp  Performative.cpp  TCPClient.cpp  TCPServer.cpp
conal/system_test/: run.sh  runAll.sh
conal/system_test/cpp_loader_multiple_nodes/: run.sh
conal/system_test/data_multiple_nodes/: run.sh
conal/system_test/example/: run.sh
conal/test/: run.sh
conal/test/CM_find_loaders/: run.sh
conal/test/example/: run.sh
conal/test/example/src/: CMakeLists.txt  main.cpp
conal/test/test_message_comm/: run.sh
conal/test/test_message_comm/src/: CMakeLists.txt  CodeManagerComponent.cpp  CodeManagerComponent.hpp  ping.cpp  pong.cpp
doc/: Requirements.ods  task_assignment.dot
